[gd_scene load_steps=6 format=2]

[ext_resource path="res://pseudo_calculator.gd" type="Script" id=1]

[sub_resource type="StyleBoxFlat" id=1]
content_margin_left = 5.0
content_margin_right = 5.0
content_margin_top = 5.0
content_margin_bottom = 5.0
bg_color = Color( 0, 0, 0, 1 )

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxFlat" id=5]
content_margin_left = 5.0
content_margin_right = 5.0
content_margin_top = 5.0
content_margin_bottom = 5.0
bg_color = Color( 0, 0, 0, 1 )

[node name="PseudoCalculator" type="PanelContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="HSplitContainer" type="HSplitContainer" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 1017.0
margin_bottom = 593.0
split_offset = 700

[node name="VSplitContainer" type="VSplitContainer" parent="HSplitContainer"]
margin_right = 869.0
margin_bottom = 586.0
split_offset = 69

[node name="InputContainer" type="HBoxContainer" parent="HSplitContainer/VSplitContainer"]
margin_right = 869.0
margin_bottom = 89.0

[node name="Input" type="TextEdit" parent="HSplitContainer/VSplitContainer/InputContainer"]
margin_right = 803.0
margin_bottom = 89.0
size_flags_horizontal = 3
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_styles/normal = SubResource( 1 )
syntax_highlighting = true

[node name="SendIt" type="Button" parent="HSplitContainer/VSplitContainer/InputContainer"]
margin_left = 807.0
margin_right = 869.0
margin_bottom = 89.0
text = "Execute"

[node name="VSplitContainer" type="VSplitContainer" parent="HSplitContainer/VSplitContainer"]
margin_top = 101.0
margin_right = 869.0
margin_bottom = 586.0
size_flags_vertical = 3
split_offset = 222

[node name="VBoxContainer" type="VBoxContainer" parent="HSplitContainer/VSplitContainer/VSplitContainer"]
margin_right = 869.0
margin_bottom = 382.0

[node name="VBoxContainer" type="VBoxContainer" parent="HSplitContainer/VSplitContainer/VSplitContainer/VBoxContainer"]
margin_right = 869.0
margin_bottom = 64.0

[node name="ControlBar" type="HBoxContainer" parent="HSplitContainer/VSplitContainer/VSplitContainer/VBoxContainer/VBoxContainer"]
margin_right = 869.0
margin_bottom = 20.0

[node name="ClearInput" type="Button" parent="HSplitContainer/VSplitContainer/VSplitContainer/VBoxContainer/VBoxContainer/ControlBar"]
margin_right = 432.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "Clear input"

[node name="ResetState" type="Button" parent="HSplitContainer/VSplitContainer/VSplitContainer/VBoxContainer/VBoxContainer/ControlBar"]
margin_left = 436.0
margin_right = 869.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "Reset state"

[node name="HSeparator" type="HSeparator" parent="HSplitContainer/VSplitContainer/VSplitContainer/VBoxContainer/VBoxContainer"]
margin_top = 24.0
margin_right = 869.0
margin_bottom = 28.0

[node name="HBoxContainer" type="HBoxContainer" parent="HSplitContainer/VSplitContainer/VSplitContainer/VBoxContainer/VBoxContainer"]
margin_top = 32.0
margin_right = 869.0
margin_bottom = 56.0

[node name="StoreInput" type="Button" parent="HSplitContainer/VSplitContainer/VSplitContainer/VBoxContainer/VBoxContainer/HBoxContainer"]
margin_right = 432.0
margin_bottom = 24.0
size_flags_horizontal = 3
text = "Store input as"

[node name="InputName" type="LineEdit" parent="HSplitContainer/VSplitContainer/VSplitContainer/VBoxContainer/VBoxContainer/HBoxContainer"]
margin_left = 436.0
margin_right = 869.0
margin_bottom = 24.0
size_flags_horizontal = 3

[node name="HSeparator2" type="HSeparator" parent="HSplitContainer/VSplitContainer/VSplitContainer/VBoxContainer/VBoxContainer"]
margin_top = 60.0
margin_right = 869.0
margin_bottom = 64.0

[node name="ActionPad" type="GridContainer" parent="HSplitContainer/VSplitContainer/VSplitContainer/VBoxContainer"]
margin_top = 68.0
margin_right = 869.0
margin_bottom = 382.0
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 4

[node name="Seven" type="Button" parent="HSplitContainer/VSplitContainer/VSplitContainer/VBoxContainer/ActionPad"]
margin_right = 214.0
margin_bottom = 75.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "7"

[node name="Eight" type="Button" parent="HSplitContainer/VSplitContainer/VSplitContainer/VBoxContainer/ActionPad"]
margin_left = 218.0
margin_right = 432.0
margin_bottom = 75.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "8"

[node name="Nine" type="Button" parent="HSplitContainer/VSplitContainer/VSplitContainer/VBoxContainer/ActionPad"]
margin_left = 436.0
margin_right = 650.0
margin_bottom = 75.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "9"

[node name="Divide" type="Button" parent="HSplitContainer/VSplitContainer/VSplitContainer/VBoxContainer/ActionPad"]
margin_left = 654.0
margin_right = 868.0
margin_bottom = 75.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "/"

[node name="Four" type="Button" parent="HSplitContainer/VSplitContainer/VSplitContainer/VBoxContainer/ActionPad"]
margin_top = 79.0
margin_right = 214.0
margin_bottom = 154.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "4"

[node name="Five" type="Button" parent="HSplitContainer/VSplitContainer/VSplitContainer/VBoxContainer/ActionPad"]
margin_left = 218.0
margin_top = 79.0
margin_right = 432.0
margin_bottom = 154.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "5"

[node name="Six" type="Button" parent="HSplitContainer/VSplitContainer/VSplitContainer/VBoxContainer/ActionPad"]
margin_left = 436.0
margin_top = 79.0
margin_right = 650.0
margin_bottom = 154.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "6"

[node name="Multiply" type="Button" parent="HSplitContainer/VSplitContainer/VSplitContainer/VBoxContainer/ActionPad"]
margin_left = 654.0
margin_top = 79.0
margin_right = 868.0
margin_bottom = 154.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "*"

[node name="One" type="Button" parent="HSplitContainer/VSplitContainer/VSplitContainer/VBoxContainer/ActionPad"]
margin_top = 158.0
margin_right = 214.0
margin_bottom = 233.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "1"

[node name="Two" type="Button" parent="HSplitContainer/VSplitContainer/VSplitContainer/VBoxContainer/ActionPad"]
margin_left = 218.0
margin_top = 158.0
margin_right = 432.0
margin_bottom = 233.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "2"

[node name="Three" type="Button" parent="HSplitContainer/VSplitContainer/VSplitContainer/VBoxContainer/ActionPad"]
margin_left = 436.0
margin_top = 158.0
margin_right = 650.0
margin_bottom = 233.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "3"

[node name="Minus" type="Button" parent="HSplitContainer/VSplitContainer/VSplitContainer/VBoxContainer/ActionPad"]
margin_left = 654.0
margin_top = 158.0
margin_right = 868.0
margin_bottom = 233.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "-"

[node name="Zero" type="Button" parent="HSplitContainer/VSplitContainer/VSplitContainer/VBoxContainer/ActionPad"]
margin_top = 237.0
margin_right = 214.0
margin_bottom = 312.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "0"

[node name="Dot" type="Button" parent="HSplitContainer/VSplitContainer/VSplitContainer/VBoxContainer/ActionPad"]
margin_left = 218.0
margin_top = 237.0
margin_right = 432.0
margin_bottom = 312.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "."

[node name="Equals" type="Button" parent="HSplitContainer/VSplitContainer/VSplitContainer/VBoxContainer/ActionPad"]
margin_left = 436.0
margin_top = 237.0
margin_right = 650.0
margin_bottom = 312.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "="

[node name="Plus" type="Button" parent="HSplitContainer/VSplitContainer/VSplitContainer/VBoxContainer/ActionPad"]
margin_left = 654.0
margin_top = 237.0
margin_right = 868.0
margin_bottom = 312.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "+"

[node name="Status" type="TextEdit" parent="HSplitContainer/VSplitContainer/VSplitContainer"]
margin_top = 394.0
margin_right = 869.0
margin_bottom = 485.0
custom_colors/font_color_readonly = Color( 0.180392, 1, 0, 1 )
custom_styles/read_only = SubResource( 4 )
custom_styles/focus = SubResource( 3 )
custom_styles/normal = SubResource( 5 )
readonly = true

[node name="Variables" type="VBoxContainer" parent="HSplitContainer"]
margin_left = 881.0
margin_right = 1010.0
margin_bottom = 586.0

[node name="Label" type="Label" parent="HSplitContainer/Variables"]
margin_right = 129.0
margin_bottom = 14.0
text = "Keys"
align = 1

[node name="ScrollContainer" type="ScrollContainer" parent="HSplitContainer/Variables"]
margin_top = 18.0
margin_right = 129.0
margin_bottom = 586.0
size_flags_vertical = 3

[node name="VarList" type="VBoxContainer" parent="HSplitContainer/Variables/ScrollContainer"]
margin_right = 129.0
margin_bottom = 568.0
size_flags_horizontal = 3
size_flags_vertical = 3
